--- a/ninja-directory/src/index.html
+++ b/ninja-directory/src/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>NinjaDirectory</title>
   <base href="/">
-
+  <link href="app/styles.css" rel="stylesheet" type="text/css" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
